kustomize/base/microservice/deployment.yaml
# Copyright (C) 2020 - present Juergen Zimmermann, Hochschule Karlsruhe
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: labor
  labels:
    app: labor
    tier: appserver
spec:
  selector:
    matchLabels:
      app: labor
  replicas: 1
  template:
    metadata:
      labels:
        app: labor
    spec:
      containers:
        - image: docker.io/juergenzimmermann/labor:1.0.0
          imagePullPolicy: Never
          name: labor
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: 200m
              memory: 256Mi
          securityContext:
            runAsNonRoot: true
