kustomize/base/microservice/virtualservice.yaml
# Copyright (C) 2020 - present Juergen Zimmermann, Hochschule Karlsruhe
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.

apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: acme-labor
spec:
  hosts:
    - gateway.acme.com
    # fuer Angular in "Software Engineering"
    #- "*"
  gateways:
    - acme-gateway
  http:
    - match:
        - uri:
            prefix: /labore/
      rewrite:
        uri: /
      route:
        - destination:
            host: labor
